<resources>
    <string name="app_name">QReciteWords</string>

    <string name="title_library">词库</string>
    <string name="title_personal">个人中心</string>
    <string name="title_learn">多学点</string>
    <string name="title_words">背单词啦</string>
    <string name="title_setting">设置中心</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">快背单词</string>
    <string name="drawer_close">快背单词</string>

    <string-array name="drawitem_sting_array">
        <item>词库</item>
        <item>个人中心</item>
        <item>设置</item>
        <item>学习小区</item>
    </string-array>

    <string name="wlable_noRead">未学习</string>
    <string name="wlable_fam">熟悉</string>
    <string name="wlable_nofam">有点陌生</string>
    <string name="wlable_unknown">没印象</string>

    <string name="today_words_to_read">今日单词</string>
    <string name="words_today_complete">已完成</string>
    <string name="start_to_read">开始</string>

    <string name="word_lable_fam">很熟悉</string>
    <string name="word_lable_nofam">不熟悉</string>
    <string name="word_lable_unknown">很陌生</string>

    <string name="librar_selected_remind">已选择该单词本，请点击取消</string>
    <string name="library_not_selected">请选择词本</string>
    <string name="see">查看</string>

    <string name="title_library_download">下载词库</string>
    <string name="msg_library_download">是否下载 %1$s</string>
    <string name="title_library_delete">删除词库</string>
    <string name="msg_library_delete">是否删除 %1$s</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="delete">删除</string>

    <string name="title_deleting_library">正在删除 %1$s</string>
    <string name="title_delete_library_success">删除成功</string>
    <string name="title_delete_library_failed">删除失败</string>
    <string name="title_downloading_library">正在下载 %1$s</string>
    <string name="title_download_library_success">下载成功</string>
    <string name="title_download_library_failed">下载失败</string>
    <string name="complete">下载完成，正在处理</string>
    <string name="open">打开</string>
    <string name="downloaded">&#160;%s %%</string>

    <string name="word_count">单词数量：%1$s</string>
    <string name="word_phon">/%1$s/</string>
    <string name="word_phars">注释: %1$s</string>
</resources>
